common-applications/openmind-tianyiyun-shanghai4-cluster/imagepullsecret-patch/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imagepullsecret-patcher
  namespace: imagepullsecret-patch
  labels:
    name: imagepullsecret-patcher
spec:
  replicas: 1
  selector:
    matchLabels:
      name: imagepullsecret-patcher
  template:
    metadata:
      labels:
        name: imagepullsecret-patcher
    spec:
      serviceAccountName: imagepullsecret-patcher
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: infra-seccomp.json
      containers:
        - name: imagepullsecret-patcher
          imagePullPolicy: Always
          image: swr.cn-southwest-2.myhuaweicloud.com/modelfoundry/common/imagepullsecret-patcher:v0.14
          volumeMounts:
            - name: src-dockerconfigjson
              mountPath: "/app/secrets"
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 15Mi
            limits:
              cpu: 100m
              memory: 30Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: src-dockerconfigjson
          secret:
            secretName: image-pull-secret-src
