common-applications/openmind-tianyiyun-shanghai4-cluster/imagepullsecret-patch/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: imagepullsecret-patch-policy-01
  namespace: imagepullsecret-patch
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
